# Decima-Forge

./: .gitignore  README.md
decimaforge/: __init__.py  __main__.py  archive.py  cli.py  compression.py  core.py  encryption.py  font.py  hash.py  localization.py  prefetch.py  pyproject.toml
