[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "decimaforge"
version = "0.2.0"
description = "Decima Engine Archive Toolkit — extract, modify, and repack game archives from Horizon Zero Dawn / Death Stranding. Credit: Decima-Explorer, decima-workshop, HZDCoreEditor"
requires-python = ">=3.10"

[project.scripts]
decimaforge = "decimaforge.cli:main"

[tool.setuptools]
package-dir = {"decimaforge" = "."}
packages = ["decimaforge"]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
]
